@@ -15,7 +15,7 @@ setup(name='collective.geo.settings',
           "Topic :: Scientific/Engineering :: GIS",
           "Programming Language :: Python",
       ],
-      keywords='Zope Plone GIS KML Google Maps Bing Yahoo OpenLayers',
+      keywords='Zope Plone GIS KML Google Maps Bing OpenLayers',
       author='Giorgio Borelli',
       author_email='giorgio@giorgioborelli.it',
       url='https://svn.plone.org/svn/collective/collective.geo.settings',
